fix(ui): top align error icons and icon sizes [EE-5314] (#3285)

--- a/app/portainer/components/time-window-picker/time-window-picker.css
+++ b/app/portainer/components/time-window-picker/time-window-picker.css
@@ -22,9 +22,3 @@
   text-decoration-line: underline;
   padding: 0px 10px;
 }
-
-.time-window-warning {
-  color: var(--text-muted-color);
-  margin: 10px 0px 15px 0px;
-  font-size: 12px;
-}
